--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 
 <p>This page is for archiving several beepbox mods. All mods were added to this repository with permission.
 
+<!-- <br>  -->
 <!-- <br> extra text -->
 
 </p>
 
-<h2>Full mod list:</h2>
+<h2>Archived mods:</h2>
 <!-- <p> -->
  <ul>
   <li><a href="./nerdbox">Nerdbox</a></li>
