--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h2>Archived mods:</h2>
 <!-- <p> -->
  <ul>
-  <li><a href="./nerdbox">Nerdbox</a></li>
+  <li><a href="./nerdbox">NerdBox</a></li>
   <!-- <li>Brucebox</li> -->
   <!-- <li>Mainbox</li> -->
 </ul> 
