--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- <p> -->
  <ul>
   <li><a href="./nerdbox">NerdBox</a></li>
-  <!-- <li>Brucebox</li> -->
+  <li><a href="./brucebox">BruceBox</a></li>
   <!-- <li>Mainbox</li> -->
 </ul> 
 <!-- </p> -->
