--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
  <ul>
   <li><a href="./nerdbox">NerdBox</a></li>
   <li><a href="./brucebox">BruceBox</a></li>
+<li><a href="./blubox">BluBox</a></li>
   <!-- <li>Mainbox</li> -->
 </ul> 
 <!-- </p> -->
