--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
  <ul>
   <li><a href="./nerdbox">NerdBox</a></li>
   <li><a href="./brucebox">BruceBox</a></li>
-<li><a href="./blubox">BluBox</a></li>
+  <li><a href="./blubox">BluBox</a></li>
+  <li><a href="./haileybox">Haileybox</a></li>
   <!-- <li>Mainbox</li> -->
+  <!-- <li>Zefbox</li> -->
 </ul> 
 <!-- </p> -->
 
