--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <li><a href="./haileybox">Haileybox</a></li>
   <li><a href="./brucebox">BruceBox</a></li>
   <li><a href="./nerdbox">NerdBox</a></li>
-   <!-- <li>Zefbox</li> -->
+  <li><a href="./zefbox">Zefbox</a></li>
   <li><a href="./blubox">BluBox</a></li>
   <!-- <li>Mainbox</li> -->
 </ul> 
@@ -25,8 +25,8 @@
 
 
 <!-- <audio controls autoplay> -->
-  <!-- <source src="background-music" type="audio/wav"> -->
-  <!-- <source src="bossanova.wav" type="audio/wav"> -->
+  <!-- <source src="background_music" type="audio/wav"> -->
+  <!-- <source src="background_music.wav" type="audio/wav"> -->
   <!-- Your browser does not support the audio element. -->
 <!-- </audio> -->
 
