--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <li><a href="./haileybox">Haileybox</a></li>
   <li><a href="./brucebox">BruceBox</a></li>
   <li><a href="./nerdbox">NerdBox</a></li>
-   <!--<li><a href="./zefbox">Zefbox</a></li>-->
+  <li><a href="./zefbox">Zefbox</a></li>
   <li><a href="./blubox">BluBox</a></li>
   <!-- <li>Mainbox</li> -->
 </ul> 
