--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <li><a href="./zefbox">Zefbox</a></li>
   <li><a href="./blubox">BluBox</a></li>
   <!-- <li>Mainbox</li> -->
+    <li><a href="./ultrabox_microtonal">UltraBox (Microtonal fork)</a></li>
 </ul> 
 <!-- </p> -->
 
