--- a/ultrabox_microtonal/index.html
+++ b/ultrabox_microtonal/index.html
@@ -338,7 +338,24 @@
     <script src="../replace_localstorage_with_indexeddb.js"></script>
 	<script>
 		document.addEventListener("DOMContentLoaded", () => {
-			const databaseName = "bruceboxFakeLocalStorage";
+			const databaseName = " <script src="../replace_localstorage_with_indexeddb.js"></script>
+	<script>
+		document.addEventListener("DOMContentLoaded", () => {
+			const databaseName = "ultraboxMicrotonalTestFakeLocalStorage";
+			initializeFakeLocalStorage(databaseName).then(() => {
+				const scriptsToRun = document.querySelectorAll("script[type='text/plain']");
+				for (const scriptToRun of scriptsToRun) {
+					const code = scriptToRun.innerHTML;
+					const scriptElement = document.createElement("script");
+					scriptElement.setAttribute("type", "text/javascript");
+					scriptElement.innerHTML = code;
+					document.head.appendChild(scriptElement);
+				}
+			});
+		});
+	</script>
+	<!-- <script type="text/javascript"> -->
+	<script type="text/plain">";
 			initializeFakeLocalStorage(databaseName).then(() => {
 				const scriptsToRun = document.querySelectorAll("script[type='text/plain']");
 				for (const scriptToRun of scriptsToRun) {
