--- a/ultrabox_microtonal/player/index.html
+++ b/ultrabox_microtonal/player/index.html
@@ -43,7 +43,24 @@
 <!--<script test="beepbox_editor.js" src="kirby_samples.js"></script>-->
 <!--<script test="beepbox_editor.js" src="wario_samples.js"></script>-->
 <body>
-	<script type="text/javascript">
+	<script src="../../replace_localstorage_with_indexeddb.js"></script>
+	<script>
+		document.addEventListener("DOMContentLoaded", () => {
+			const databaseName = "ultraboxMicrotonalTestForkFakeLocalStorage";
+			initializeFakeLocalStorage(databaseName).then(() => {
+				const scriptsToRun = document.querySelectorAll("script[type='text/plain']");
+				for (const scriptToRun of scriptsToRun) {
+					const code = scriptToRun.innerHTML;
+					const scriptElement = document.createElement("script");
+					scriptElement.setAttribute("type", "text/javascript");
+					scriptElement.innerHTML = code;
+					document.head.appendChild(scriptElement);
+				}
+			});
+		});
+	</script>
+	<!-- <script type="text/javascript"> -->
+	<script type="text/plain">
 		function browserHasRequiredFeatures() {
 			"use strict";
 			if (window.AudioContext == undefined && window.webkitAudioContext == undefined) {
