--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>This page is for archiving several beepbox mods. All mods were added to this repository with permission.
 
-<!-- <br>  -->
+<!-- <br> The Thurmbox Archives may include some less-than-savory samples -->
 <!-- <br> extra text -->
 
 </p>
@@ -20,7 +20,10 @@
   <li><a href="./zefbox">Zefbox</a></li>
   <li><a href="./blubox">BluBox</a></li>
   <!-- <li>Mainbox</li> -->
-    <li><a href="./ultrabox_microtonal">UltraBox (Microtonal fork)</a></li>
+  <li><a href="./thurmbox">Thurmbox (BeepBox 4.0.1 fork)</a></li>
++ <li><a href="./thurmbox/pandoras-jummbox.html">Thurmbox (JummBox 2.4 fork)</a></li>
++ <li><a href="./thurmbox/pandoras-jummbox-40.html">Thurmbox (JummBox 2.5 fork)</a></li>
+  <li><a href="./ultrabox_microtonal">UltraBox (Microtonal fork)</a></li>
 </ul> 
 <!-- </p> -->
 
