--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <li><a href="./blubox">BluBox</a></li>
   <!-- <li>Mainbox</li> -->
   <li><a href="./thurmbox">Thurmbox (BeepBox 4.0.1 fork)</a></li>
-+ <li><a href="./thurmbox/pandoras-jummbox.html">Thurmbox (JummBox 2.4 fork)</a></li>
-+ <li><a href="./thurmbox/pandoras-jummbox-40.html">Thurmbox (JummBox 2.5 fork)</a></li>
+  <li><a href="./thurmbox/pandoras-jummbox.html">Thurmbox (JummBox 2.4 fork)</a></li>
+  <li><a href="./thurmbox/pandoras-jummbox-40.html">Thurmbox (JummBox 2.5 fork)</a></li>
   <li><a href="./ultrabox_microtonal">UltraBox (Microtonal fork)</a></li>
 </ul> 
 <!-- </p> -->
