--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>Ultrabox Beepmod Archives</h1>
 
-<p>This page is for archiving several beepbox mods. All mods were added to this repository with permission.
+<p>This page is for archiving several beepbox mods.
 
 <!-- <br> The Thurmbox Archives may include some less-than-savory samples -->
 <!-- <br> extra text -->
