remove warning text on UB microtonal

--- a/ultrabox_microtonal/index.html
+++ b/ultrabox_microtonal/index.html
@@ -159,7 +159,7 @@
 <!--<script test="beepbox_editor.js" src="kirby_samples.js"></script>-->
 <!--<script test="beepbox_editor.js" src="wario_samples.js"></script>-->
 	 <!--WIP, DO NOT USE-->
-	 <center>This is a TEMPORARY url for testing microtonality. Songs made in this version of ultrabox will NOT redirect when microtonality gets properly added to ultrabox.</center>
+	 <!--<center>This is a TEMPORARY url for testing microtonality. Songs made in this version of ultrabox will NOT redirect when microtonality gets properly added to ultrabox.</center>-->
 <body id="secondImage">
     <script>
         const image = localStorage.getItem('customTheme2');
